feat: add default currencies (#13)
* refactor: invert conversion calculus

* feat: add client interface

* refactor: get default rates in use case

* chore: update usecase struct

* feat: add rates vos

* feat: add repository method

* feat: add client

* feat: add bad gateway response to handler

* chore: inject client as dependency

* docs: generate swagger

* dos: update readme

* chore: update dependencies
