# docs/swagger.json
@@ -126,6 +126,12 @@
                         "schema": {
                             "$ref": "#/definitions/responses.ErrorPayload"
                         }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorPayload"
+                        }
                     }
                 }
             }
